fix cut off shadow on marketplace firefox hero image

--- a/media/css/marketplace.less
+++ b/media/css/marketplace.less
@@ -129,10 +129,10 @@
 
 #apps-hero-background {
     position: absolute;
-    width: 460px;
+    width: 488px;
     height: 488px;
     bottom: 120px;
-    right: 20px;
+    right: 0;
     background: url(/media/img/marketplace/apps-firefox-hero.png) 0 100% no-repeat;
 }
 
